@@ -58,13 +58,14 @@
         = f.label :admin, class: 'control-label'
         - if current_user == @user
           .col-sm-10= f.check_box :admin, disabled: true
-          .col-sm-10 You cannot remove your own admin rights
+          .col-sm-10 You cannot remove your own admin rights.
         - else
           .col-sm-10= f.check_box :admin
 
       .form-group
         = f.label :external, class: 'control-label'
         .col-sm-10= f.check_box :external
+        .col-sm-10 External users can not see internal or private projects unless access is explicitly granted. Also, external user can not create projects or groups.
 
     %fieldset
       %legend Profile
